welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: identifier expected but string literal found.
var x:String == "A" ;
                ^BDRBuggle:22: error: ')' expected but 'if' found.
  if (x == "B") {
  ^BDRBuggle:26: error: ';' expected but 'if' found.
  if (x == "C") {
  ^